--- a/src/Libraries/AridityTeam.Platform.Git/AridityTeam.Platform.Git.csproj
+++ b/src/Libraries/AridityTeam.Platform.Git/AridityTeam.Platform.Git.csproj
@@ -12,8 +12,9 @@
     <DocumentationFile>..\..\..\bin\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
 
+  <!--.NET Standard 2.0 & .NET Framework v4.7.2-->
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'net472'">
     <PackageReference Include="Nullable" Version="1.3.1" />
   </ItemGroup>
-
+  
 </Project>
