--- a/src/Tests/AridityTeam.Platform.Tests/AridityTeam.Platform.Tests.csproj
+++ b/src/Tests/AridityTeam.Platform.Tests/AridityTeam.Platform.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Libraries\AridityTeam.Platform.Git\AridityTeam.Platform.Git.csproj" />
     <ProjectReference Include="..\InterfaceExposingShared\InterfaceExposingShared.csproj" />
   </ItemGroup>
 
