--- a/src/Tests/AridityTeam.Platform.Tests/AridityTeam.Platform.Tests.csproj
+++ b/src/Tests/AridityTeam.Platform.Tests/AridityTeam.Platform.Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>disable</ImplicitUsings>
+    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>AridityTeam</RootNamespace>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -12,15 +12,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="All" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="xunit" Version="2.5.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+    <PackageReference Include="xunit" Version="2.6.6" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.6">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="coverlet.collector" Version="6.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Libraries\AridityTeam.Platform.Git\AridityTeam.Platform.Git.csproj" />
     <ProjectReference Include="..\InterfaceExposingShared\InterfaceExposingShared.csproj" />
+    <ProjectReference Include="..\..\Libraries\AridityTeam.Platform.Diagnostics\AridityTeam.Platform.Diagnostics.csproj" />
   </ItemGroup>
 
   <ItemGroup>
