improve unit tests and Git.cs

--- a/src/Tests/AridityTeam.Platform.Tests/AridityTeam.Platform.Tests.csproj
+++ b/src/Tests/AridityTeam.Platform.Tests/AridityTeam.Platform.Tests.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>AridityTeam</RootNamespace>
+    <RootNamespace>AridityTeam.Platform.Tests</RootNamespace>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 
     <IsPackable>false</IsPackable>
@@ -23,6 +23,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Moq" Version="4.20.70" />
   </ItemGroup>
 
   <ItemGroup>
