--- a/.github/workflows/build-platform-libs-win.yml
+++ b/.github/workflows/build-platform-libs-win.yml
@@ -70,7 +70,7 @@ jobs:
       if: success() || failure()
       
     - name: Upload test results
-      uses: actions/upload-artifact@latest
+      uses: actions/upload-artifact@v4
       if: always()
       with:
         name: test-results
