--- a/src/Libraries/AridityTeam.Platform.Diagnostics/AridityTeam.Platform.Diagnostics.csproj
+++ b/src/Libraries/AridityTeam.Platform.Diagnostics/AridityTeam.Platform.Diagnostics.csproj
@@ -11,14 +11,33 @@
     <Authors>Aridity Team</Authors>
     <Description>Cross-platform diagnostic and platform utilities for .NET applications.</Description>
     <OutputPath>..\..\..\bin</OutputPath>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
+    
+  <!--NuGet package info-->
+  <PropertyGroup>
+    <PackageId>$(MSBuildProjectName)</PackageId>
+    <Version>0.0.1</Version>
+    <Authors>PracticeMedicine</Authors>
+    <Company>The Aridity Team</Company>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <Description>Diagnostics platform library for the Aridity Team projects.</Description>
+    <PackageTags>aridity;base</PackageTags>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'net472'">
     <PackageReference Include="Nullable" Version="1.3.1" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" Pack="True" PackagePath="\"/>
+  </ItemGroup>
   
   <ItemGroup>
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="All" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\AridityTeam.Platform.Core\AridityTeam.Platform.Core.csproj" />
   </ItemGroup>
 
 </Project> 
