--- a/src/Libraries/AridityTeam.Platform.Core/AridityTeam.Platform.Core.csproj
+++ b/src/Libraries/AridityTeam.Platform.Core/AridityTeam.Platform.Core.csproj
@@ -24,6 +24,8 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <Description>Core platform library for the Aridity Team projects.</Description>
     <PackageTags>aridity;base</PackageTags>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
     
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'net472'">
