--- a/src/Libraries/AridityTeam.Platform.Git/AridityTeam.Platform.Git.csproj
+++ b/src/Libraries/AridityTeam.Platform.Git/AridityTeam.Platform.Git.csproj
@@ -24,6 +24,8 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <Description>Git library for the Aridity Team projects.</Description>
     <PackageTags>aridity;base</PackageTags>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <!--.NET Standard 2.0 & .NET Framework v4.7.2-->
