--- a/src/Libraries/AridityTeam.Platform.Core/AridityTeam.Platform.Core.csproj
+++ b/src/Libraries/AridityTeam.Platform.Core/AridityTeam.Platform.Core.csproj
@@ -24,7 +24,13 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <Description>Core platform library for the Aridity Team projects.</Description>
     <PackageTags>aridity;base</PackageTags>
+    <RepositoryUrl>https://github.com/AridityTeam/aridity-platform-lib</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Copyright>Copyright (c) 2025 The Aridity Team</Copyright>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <DebugType>embedded</DebugType>
   </PropertyGroup>
     
