--- a/src/Libraries/AridityTeam.Platform.Diagnostics/AridityTeam.Platform.Diagnostics.csproj
+++ b/src/Libraries/AridityTeam.Platform.Diagnostics/AridityTeam.Platform.Diagnostics.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
+    <RootNamespace>AridityTeam</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Version>1.0.0</Version>
@@ -38,7 +39,7 @@
     <PackageReference Include="Nullable" Version="1.3.1" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="README.md" Pack="True" PackagePath="\"/>
+    <None Include="README.md" Pack="True" PackagePath="\" />
   </ItemGroup>
   
   <ItemGroup>
