--- a/src/Libraries/AridityTeam.Platform.Git/AridityTeam.Platform.Git.csproj
+++ b/src/Libraries/AridityTeam.Platform.Git/AridityTeam.Platform.Git.csproj
@@ -38,7 +38,10 @@
     <PackageReference Include="Nullable" Version="1.3.1" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="README.md" Pack="True" PackagePath="\"/>
+    <None Include="README.md" Pack="True" PackagePath="\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AridityTeam.Platform.Core\AridityTeam.Platform.Core.csproj" />
   </ItemGroup>
   
 </Project>
