--- a/src/Libraries/AridityTeam.Platform.Core/AridityTeam.Platform.Core.csproj
+++ b/src/Libraries/AridityTeam.Platform.Core/AridityTeam.Platform.Core.csproj
@@ -40,5 +40,18 @@
   <ItemGroup>
     <None Include="README.md" Pack="True" PackagePath="\" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Update="ExceptionStrings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ExceptionStrings.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="ExceptionStrings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ExceptionStrings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
 
 </Project>
