--- a/src/Libraries/AridityTeam.Platform.Core/AridityTeam.Platform.Core.csproj
+++ b/src/Libraries/AridityTeam.Platform.Core/AridityTeam.Platform.Core.csproj
@@ -1,57 +1,59 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>net8.0;net472</TargetFrameworks>
-    <ImplicitUsings>disable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <LangVersion>latest</LangVersion>
-    <RootNamespace>AridityTeam</RootNamespace>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <OutputPath>..\..\..\bin</OutputPath>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <DocumentationFile>..\..\..\bin\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <SignAssembly>True</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\AridityTeam.Platform.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
-    
-  <!--NuGet package info-->
-  <PropertyGroup>
-    <PackageId>$(MSBuildProjectName)</PackageId>
-    <Version>0.0.2</Version>
-    <Authors>PracticeMedicine</Authors>
-    <Company>The Aridity Team</Company>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
-    <Description>Core platform library for the Aridity Team projects.</Description>
-    <PackageTags>aridity;base</PackageTags>
-    <RepositoryUrl>https://github.com/AridityTeam/aridity-platform-lib</RepositoryUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Copyright>Copyright (c) 2025 The Aridity Team</Copyright>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <EmbedUntrackedSources>true</EmbedUntrackedSources>
-    <IncludeSymbols>true</IncludeSymbols>
-    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-  </PropertyGroup>
-    
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'net472'">
-    <PackageReference Include="Nullable" Version="1.3.1" />
-    <PackageReference Include="System.Reflection.DispatchProxy" Version="4.8.2" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="README.md" Pack="True" PackagePath="\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Update="ExceptionStrings.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>ExceptionStrings.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Update="ExceptionStrings.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>ExceptionStrings.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
+    <PropertyGroup>
+	    <TargetFrameworks>net8.0;net472</TargetFrameworks>
+	    <ImplicitUsings>disable</ImplicitUsings>
+	    <Nullable>enable</Nullable>
+	    <LangVersion>latest</LangVersion>
+	    <RootNamespace>AridityTeam</RootNamespace>
+	    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+	    <OutputPath>..\..\..\bin</OutputPath>
+	    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+	    <DocumentationFile>..\..\..\bin\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+	    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	    <SignAssembly>True</SignAssembly>
+	    <AssemblyOriginatorKeyFile>..\AridityTeam.Platform.snk</AssemblyOriginatorKeyFile>
+	    <Platforms>AnyCPU;x64;x86</Platforms>
+    </PropertyGroup>
+	
+    <!--NuGet package info-->
+    <PropertyGroup>
+	    <PackageId>$(MSBuildProjectName)</PackageId>
+	    <Version>0.0.3</Version>
+	    <Authors>PracticeMedicine</Authors>
+	    <Company>The Aridity Team</Company>
+	    <PackageReadmeFile>README.md</PackageReadmeFile>
+	    <Description>Core platform library for the Aridity Team projects.</Description>
+	    <PackageTags>aridity;base</PackageTags>
+	    <RepositoryUrl>https://github.com/AridityTeam/aridity-platform-lib</RepositoryUrl>
+	    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+	    <Copyright>Copyright (c) 2025 The Aridity Team</Copyright>
+	    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+	    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+	    <IncludeSymbols>true</IncludeSymbols>
+	    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    </PropertyGroup>
+	
+    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'net472'">
+	    <PackageReference Include="Nullable" Version="1.3.1" />
+	    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+	    <PackageReference Include="System.Reflection.DispatchProxy" Version="4.8.2" />
+    </ItemGroup>
+    <ItemGroup>
+	    <None Include="README.md" Pack="True" PackagePath="\" />
+    </ItemGroup>
+    <ItemGroup>
+	    <Compile Update="SR.Designer.cs">
+	        <DesignTime>True</DesignTime>
+	        <AutoGen>True</AutoGen>
+	        <DependentUpon>SR.resx</DependentUpon>
+	    </Compile>
+    </ItemGroup>
+    <ItemGroup>
+	    <EmbeddedResource Update="SR.resx">
+	        <Generator>ResXFileCodeGenerator</Generator>
+	        <LastGenOutput>SR.Designer.cs</LastGenOutput>
+	    </EmbeddedResource>
+    </ItemGroup>
 
 </Project>
