--- a/src/Libraries/AridityTeam.Platform.Core/AridityTeam.Platform.Core.csproj
+++ b/src/Libraries/AridityTeam.Platform.Core/AridityTeam.Platform.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-	    <TargetFrameworks>net8.0;net472</TargetFrameworks>
+	    <TargetFrameworks>net10.0;net8.0;net472;netstandard2.0</TargetFrameworks>
 	    <ImplicitUsings>disable</ImplicitUsings>
 	    <Nullable>enable</Nullable>
 	    <LangVersion>latest</LangVersion>
@@ -33,6 +33,13 @@
 	    <IncludeSymbols>true</IncludeSymbols>
 	    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
+
+	<PropertyGroup>
+		<PackageReleaseNotes>
+			- Replaced all of the utilities from 0.0.2 with the Cereon ones
+			- Moved the contents of the "Diagnostics" and "Git" projects into the "Core" project
+		</PackageReleaseNotes>
+	</PropertyGroup>
 	
     <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'net472'">
 	    <PackageReference Include="Nullable" Version="1.3.1" />
