:musical_note:Anong klaseng buhay to?:musical_note:

--- a/.github/workflows/build-x86_64.yml
+++ b/.github/workflows/build-x86_64.yml
@@ -24,6 +24,7 @@ jobs:
         target_framework: [net10.0, net8.0, net472, netstandard2.0]
         include:
           - os: windows-latest
+            target_framework: [net10.0, net8.0, net472, netstandard2.0]
           - os: ubuntu-latest
             target_framework: net10.0
           - os: ubuntu-latest
